--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ sysinfo.txt
 *.unitypackage
 ProjectSettings/ProjectVersion.txt
 UserSettings/EditorUserSettings.asset
+Logs/AssetImportWorker0.log
+*.log
